--- a/Yone/Yone.csproj
+++ b/Yone/Yone.csproj
@@ -97,23 +97,23 @@
     <Compile Include="DaoHungAIO_Evade\SpellData.cs" />
     <Compile Include="DaoHungAIO_Evade\SpellDatabase.cs" />
     <Compile Include="DaoHungAIO_Evade\Utils.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\AoePrediction.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\Collision.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\CollisionableObjects.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\HitChance.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\Prediction.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\PredictionInput.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\PredictionOutput.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\SkillshotType.cs" />
+    <Compile Include="FunnySlayerCommon\FSPrediction\StoredPath.cs" />
+    <Compile Include="FunnySlayerCommon\FSspell.cs" />
+    <Compile Include="FunnySlayerCommon\FSTargetSelector.cs" />
+    <Compile Include="FunnySlayerCommon\MenuClass.cs" />
+    <Compile Include="FunnySlayerCommon\OnAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SebbyLibPorted\Cache.cs" />
     <Compile Include="SebbyLibPorted\Events.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\AoePrediction.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\Collision.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\CollisionableObjects.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\HitChance.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\Prediction.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\PredictionInput.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\PredictionOutput.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\SkillshotType.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\StoredPath.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSspell.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSTargetSelector.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\MenuClass.cs" />
-    <Compile Include="SebbyLibPorted\FunnySlayerCommon\OnAction.cs" />
     <Compile Include="SebbyLibPorted\Geometry.cs" />
     <Compile Include="SebbyLibPorted\HealthPrediction.cs" />
     <Compile Include="SebbyLibPorted\MEC.cs" />
